--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,55 @@ html, body, #app {
     height: 100%;
 }
 
+.dices {
+    display: flex;
+    flex-direction: row;
+}
+
+.dice {
+    // 500 / 83
+    width:84px;
+    height: 83px;
+    // filter: grayscale(100%);
+}
+
+.dice-0 { background: url("../images/dices.jpg") -416px 0; }
+.dice-1 { background: url("../images/dices.jpg") 0 0; }
+.dice-2 { background: url("../images/dices.jpg") -83px 0; }
+.dice-3 { background: url("../images/dices.jpg") -167px 0; }
+.dice-4 { background: url("../images/dices.jpg") -333px 0; }
+.dice-5 { background: url("../images/dices.jpg") -250px 0; }
+
 .dice-frozen{
-    border: 1px solid black;
+    border: 1px solid black !important;
+}
+
+.dice-special-face-food {
+    border: 1px solid orange;
+}
+.dice-special-face-worker {
+    border: 1px solid blue;
+}
+
+.city{
+    display: flex;
+    flex-direction: row;
+    
+    .district {
+        width: 50px;
+        min-width: 50px;
+        height: 50px;
+        margin: 0 10px;
+        background-color: orange;
+        border: 1px solid black;
+    
+        .district-population{
+            line-height: 50px;
+            text-align: center;
+        }
+    }
+
+    .district-done {
+        border-color: greenyellow;
+    }
 }
