--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,11 @@ html, body, #app {
     height: 100%;
 }
 
+.game-parts {
+    display: flex;
+    justify-content: space-between;
+}
+
 .dice-roll-zone-dices {
     display: flex;
     flex-direction: row;
@@ -43,26 +48,31 @@ html, body, #app {
     border: 1px solid blue;
 }
 
-.city{
+.city {
     display: flex;
-    flex-direction: row;
-    
-    .district {
-        width: 50px;
-        min-width: 50px;
-        height: 50px;
-        margin: 0 10px;
-        background-color: orange;
-        border: 1px solid black;
-    
-        .district-population{
-            line-height: 50px;
-            text-align: center;
-        }
-    }
+    flex-direction: column;
 
-    .district-done {
-        border-color: greenyellow;
+    .city-districts {
+        display: flex;
+        flex-direction: row;
+
+        .district {
+            width: 50px;
+            min-width: 50px;
+            height: 50px;
+            margin: 0 10px;
+            background-color: orange;
+            border: 1px solid black;
+        
+            .district-population{
+                line-height: 50px;
+                text-align: center;
+            }
+        }
+    
+        .district-done {
+            border-color: greenyellow;
+        }
     }
 }
 
@@ -113,4 +123,8 @@ html, body, #app {
 
 .individual-stock-FoodStock {
     margin-top: 25px;
+}
+
+.dev-elt {
+    height: 22px;
 }
