--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,13 +9,35 @@ html, body, #app {
     // overflow: hidden;
 }
 
-.main-container{
+#root, .app {
     height: 100%;
+    overflow: hidden;
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
+}
+
+.toolbar-round-counter {
+    flex: 1;
+    text-align: right;
+}
+
+.game {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 25px;
 }
 
 .game-parts {
     display: flex;
     justify-content: space-between;
+
+    padding: 50px 0;
+    border-top: 1px solid black;
 }
 
 .dice-roll-zone-dices {
