--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,12 @@
-
 * {
     box-sizing: border-box !important;
     margin: 0;
 }
+
+h2 {
+    margin-bottom: 15px;
+}
+
 html, body, #app {
     // background-color: rgba(black, 0.42) !important;
     height: 100%;
@@ -34,21 +38,117 @@ html, body, #app {
 
 .game-parts {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
-    padding: 50px 0;
-    border-top: 1px solid black;
+    padding-bottom: 30px;
+    // border-top: 1px solid black;
+
+    .game-parts-elt {
+
+    }
+
 }
 
-.dice-roll-zone-dices {
+.game-phase {
+    // padding-bottom: 50px;
+
+    .game-phase-current-desciption {
+        text-align: center;
+        font-style: oblique;
+        font-size: larger;
+    }
+}
+
+.still-to-use {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    // outline: 7px red solid;
+    box-shadow: 0 0 0 8px #3f51b5;
+    border-radius: 7px;
+    text-align: center;
+    margin: auto;
+    font-size: 30px;
+}
+
+.game-phase-4{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+
+    .game-phase-4-btn{
+        margin: 0 auto;
+        margin-top: 35px;
+    }
 }
 
+.game-phase-5 {
+    display: flex;
+    flex-direction: column;
+
+    .resources-stock-size {
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
+        // outline: 7px red solid;
+        box-shadow: 0 0 0 8px #3f51b5;        
+        border-radius: 7px;
+        text-align: center;
+        margin: auto;
+        font-size: 30px;
+    }
+
+    .resources-stock-size-not-ok {
+        box-shadow: 0 0 0 8px #ff5500;
+    }
+
+    button {
+        margin: 0 auto;
+        margin-top: 35px;
+    }
+
+}
+
+.dice-roll-zone {
+    display: flex;
+}
+
+.dice-roll {
+    width: 50%;
+    margin-left: 25%;
+    // margin-right: 5%;
+    
+    // width: 75%;
+
+    .dice-roll-counter {
+        width: 100%;
+        text-align: center;
+    }
+
+    .dice-roll-button {
+        margin: 0 20px;
+    }
+
+    .dice-roll-zone-dices {
+        padding: 25px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    
+    .dice-roll-zone-action {
+        text-align: center;
+    }
+}
+
+.disasters-help {
+    width: 25%;
+}
+    
 .dice {
     // 500 / 83
     width:84px;
     height: 83px;
+    margin: 0 15px;
     // filter: grayscale(100%);
 }
 
@@ -70,9 +170,13 @@ html, body, #app {
     border: 1px solid blue;
 }
 
+
+$diceColor: lightgrey;
+
 .city {
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
 
     .city-districts {
         display: flex;
@@ -83,8 +187,8 @@ html, body, #app {
             min-width: 50px;
             height: 50px;
             margin: 0 10px;
-            background-color: orange;
-            border: 1px solid black;
+            background-color: $diceColor;
+            border: 1px solid grey;
         
             .district-population{
                 line-height: 50px;
@@ -93,14 +197,17 @@ html, body, #app {
         }
     
         .district-done {
-            border-color: greenyellow;
+            border-color: $diceColor;
         }
     }
 }
 
+$pointWidth: 4px;
+
 .individual-stock {
     display: flex;
     flex-direction: row;
+    margin-bottom: 8px;
 
     .line {
         display: flex;
@@ -112,27 +219,30 @@ html, body, #app {
         flex-direction: column;
         
         .point {
-            width: 5px;
+            width: $pointWidth;
             margin: auto;
 
-            border: 5px black solid;
-            border-radius: 10px;
+            border: $pointWidth black solid;
+            border-radius: $pointWidth * 2;
+
+            filter: opacity(0.75)
         }
 
         .point-value {
             width: 21px;
             text-align: center;
             font-weight: bold;
-            font-size: 13px;
+            font-size: 15px;
         }
     }
 
     .line-point:first-child{
-        margin-right: 5px;
+        margin-right: $pointWidth * 2;
     }
 
     .line-point-current-position .point{
-        border-width: 10px;
+        border-width: $pointWidth * 2;
+        filter: opacity(1)        
     }
 }
 
@@ -147,6 +257,39 @@ html, body, #app {
     margin-top: 25px;
 }
 
+.monuments {
+    max-width: 600px;
+
+    .building-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        
+        .building {
+            width: 200px;
+            text-align: center;
+
+            .building-img {
+                height: 120px;
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-position: center;
+                filter: opacity(0.5);
+            }
+            .building-img-accropole { background-image: url('../images/accropole.jpg')            }
+            .building-img-pyramide-louvre { background-image: url('../images/pyramide-louvre.jpg')            }
+            .building-img-eglise-rome { background-image: url('../images/notre-dame.jpg')            }
+            .building-img-muraille-chine { background-image: url('../images/muraille-chine.jpg')            }
+            .building-img-obelisque { background-image: url('../images/obelisque.jpg')            }
+            .building-img-cathedrale { background-image: url('../images/taj-mahal.jpg')            }
+            .building-img-pyramide-egypte { background-image: url('../images/pyramide-egypte.jpg')            }
+        }
+
+        .building-done .building-img { filter: opacity(1)}
+    }
+}
+
 .dev-elt {
-    height: 22px;
+    height: 35px;
+    text-align: justify;
 }
