--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@ html, body, #app {
     overflow: hidden;
 }
 
+
 .app {
     display: flex;
     flex-direction: column;
@@ -71,11 +72,11 @@ html, body, #app {
     font-size: 30px;
 }
 
-.game-phase-4{
+.game-phase-4, .game-phase-3 {
     display: flex;
     flex-direction: column;
 
-    .game-phase-4-btn{
+    .game-phase-4-btn, .game-phase-3-btn {
         margin: 0 auto;
         margin-top: 35px;
     }
@@ -292,4 +293,90 @@ $pointWidth: 4px;
 .dev-elt {
     height: 35px;
     text-align: justify;
+}
+
+.end-game {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 25px;    
+
+    .end-game-title {
+        padding: 20px 0;
+        text-align: center;
+    }
+
+    .end-game-history-actions {
+        margin-top: 15px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .end-game-leader-board {
+        padding-top: 40px;
+    }
+    
+}
+
+.leader-board {
+
+}
+
+.score-board-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width:90%;
+    margin: auto;
+    height: 70px;    
+
+    .score-board-separator {
+        flex:1;
+        text-align: center;
+        margin-top: 35px;
+        height: 15px;
+    }
+    .score-board-elt {
+        flex:2;
+        width:120px;
+        text-align: center;
+
+        .score-board-elt-title {
+            height: 25px;
+        }
+        .score-board-elt-value {
+            text-align: center;
+            line-height: 35px;
+            border: 1px solid black;
+        }
+    }
+
+    .score-board-total .score-board-elt-value {
+        border-width: 2px;
+    }
+
+}
+
+@media screen and (max-width: 740px) {
+    #root, .app {
+        overflow: initial;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    .game {
+        padding: 0 10px;
+    }
+
+    .game-parts {
+        display: flex;
+        flex-wrap: wrap;
+        padding-bottom: 10px;
+
+        .game-parts-elt {
+            min-width: 100%;
+        }
+    
+    }
 }
